--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "npm run build && npm run export && gh-pages -d out"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.0",
     "next-images": "^1.0.0",
     "styled-components": "^3.4.9"
   }
