--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "export": "next export",
     "deploy": "npm run build && npm run export && gh-pages -d out"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZeroX-DG/NewWallWeb.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
