--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "deploy": "npm run build && npm run export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,6 @@
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.0",
     "next-images": "^1.0.0",
     "styled-components": "^3.4.9"
   }
